# apps/server/src/types/repo.dto.ts
@@ -1,0 +1,6 @@
+export type RepoOrDirOrFile = {
+  type: string;
+  name: string;
+  size?: number;
+  url: string;
+};
